--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,12 +9,14 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Geolocation Example</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <ion-button (click)="getCurrentPosition()">Get Current Location</ion-button>
+
+  <div *ngIf="currentCoordinates">
+    <p>Latitude: {{ currentCoordinates.latitude }}</p>
+    <p>Longitude: {{ currentCoordinates.longitude }}</p>
   </div>
 </ion-content>
